--- a/Documentation/Makefile.am
+++ b/Documentation/Makefile.am
@@ -1,8 +1,9 @@
 USERMAN_TEXS = UserManual.tex Preface.tex Introduction.tex Reference.tex \
 		Tutorial.tex Help.tex COPYING.tex MyTitlepage.sty \
 		titlepage.tex
-USERMAN_FIGS = MainWindow.png CardCatDrawer.png MainWindowAnnotated.pdf \
-		SearchWindowAnnotated.pdf
+USERMAN_FIGS = MainWindow.png CardCatDrawer.png MainWindowAnnotated.png \
+		SearchWindowAnnotated.png UpdateWindowAnnotated.png \
+		EditCardAnnotated.png
 
 USERMAN = UserManual
 USERMAN_PDF = $(USERMAN).pdf
