--- a/Scripts/Makefile.in
+++ b/Scripts/Makefile.in
@@ -132,7 +132,7 @@ target_alias = @target_alias@
 target_cpu = @target_cpu@
 target_os = @target_os@
 target_vendor = @target_vendor@
-LibraryScripts = BWHelp.tcl labelselectcolor.tcl panedw.tcl fileentry.tcl \
+LibraryScripts = HTMLHelp.tcl labelselectcolor.tcl panedw.tcl fileentry.tcl \
                  labelspinbox.tcl splash.tcl labelcombobox.tcl mainwindow.tcl \
                  BWStdMenuBar.tcl AnimatedHeader.tcl SearchWindow.tcl \
 		 EditWindow.tcl DatabaseFunctions.tcl AECFunctions.tcl \
