--- a/configure.ac
+++ b/configure.ac
@@ -17,8 +17,9 @@ fi
 AC_CONFIG_SRCDIR(Scripts/HL3.src)
 AM_INIT_AUTOMAKE(HomeLibrarian,3.0b3)
 
-AC_CONFIG_FILES([Makefile Images/Makefile Scripts/Makefile Documentation/Makefile 
-		 BuildScripts/Makefile BuildData/Makefile Doxyfile])
+AC_CONFIG_FILES([Makefile Images/Makefile Scripts/Makefile \
+		 Documentation/Makefile BuildScripts/Makefile \
+		 BuildData/Makefile Doxyfile HomeLibrarian.spec])
 
 if test "x${prefix}" = "xNONE"; then
     prefix=/usr/local
